@@ -1027,7 +1027,7 @@ void Tool_schedule::now_what
 	signed char frames[12];		// Use pick.
 	int cnt = npc->get_attack_frames(toolshape, false, rand()%8, frames);
 	if (cnt)
-		npc->set_action(new Frames_actor_action(frames, cnt - 1));
+		npc->set_action(new Frames_actor_action(frames, cnt));
 	npc->start();			// Get back into time queue.
 	}
 
@@ -2344,7 +2344,7 @@ void Sew_schedule::now_what
 		int nframes = npc->get_attack_frames(698, false, 
 								dir, frames);
 		if (nframes)
-			npc->set_action(new Frames_actor_action(frames, nframes - 1));
+			npc->set_action(new Frames_actor_action(frames, nframes));
 		sew_clothes_cnt++;
 		if (sew_clothes_cnt > 1 && sew_clothes_cnt < 5)
 			{
@@ -3005,7 +3005,7 @@ void Forge_schedule::now_what
 		signed char frames[12];
 		int cnt = npc->get_attack_frames(623, false, 0, frames);
 		if (cnt)
-			npc->set_action(new Frames_actor_action(frames, cnt - 1));
+			npc->set_action(new Frames_actor_action(frames, cnt));
 		
 		Actor_action **a = new Actor_action*[10];
 		a[0] = new Frames_actor_action(frames, cnt);
